--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -6,7 +6,7 @@ body {
     background-color: #f4f4f4;
 }
 
-.welcome-container {
+.about-container {
     max-width: 800px;
     margin: 50px auto;
     padding: 20px;
