--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,13 +1,13 @@
 <div class="container">
     <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
       <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-        <span class="fs-4">VG Projekt</span>
+        <span class="fs-4">WeatherNow</span>
       </a>
 
       <ul class="nav nav-pills">
         <li role="button" class="nav-item"><span class="nav-link" aria-current="page" (click)="navigateHome($event)">Home</span></li>
         <li role="button" class="nav-item"><span class="nav-link" (click)="navigateWeather($event)">Weather</span></li>
-        <li role="button" class="nav-item"><span class="nav-link">About</span></li>
+        <li role="button" class="nav-item"><span class="nav-link" (click)="navigateAbout($event)">About</span></li>
       </ul>
     </header>
   </div>
