--- a/src/app/loader/loader.component.html
+++ b/src/app/loader/loader.component.html
@@ -1,8 +1,8 @@
-<div id="boxes">
+<!-- <div id="boxes">
     <div class="box one"></div>
     <div class="box two"></div>
     <div class="box three"></div>
     <div class="box four"></div>
-</div>
+</div> -->
 
-<h3 class="an-1">I am looking great.</h3>
+<h3 class="an-1" style="text-align: center;">Welcome to Weather Now</h3>
