--- a/src/app/weather/weather.component.css
+++ b/src/app/weather/weather.component.css
@@ -20,3 +20,69 @@ button {
     display: flex;
     flex-direction: column;
 }
+
+.card-custom {
+    padding: 1rem;
+    width: 100%;
+}
+
+
+
+
+
+
+body {
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+    margin: 0;
+    padding: 0;
+    background-color: #f4f4f4;
+}
+
+
+h1, h2 {
+    color: #333;
+}
+
+p {
+    margin: 15px 0;
+    color: #555;
+}
+
+ul {
+    list-style-type: disc;
+    margin: 15px 0;
+    padding-left: 20px;
+}
+
+li {
+    margin-bottom: 10px;
+}
+
+li strong {
+    color: #333;
+}
+
+.weather-info p {
+    font-size: 1.2em;
+    margin: 10px 0;
+}
+
+.weather-info i {
+    margin-right: 10px;
+}
+
+.loader {
+    border: 8px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 8px solid #3498db;
+    width: 60px;
+    height: 60px;
+    animation: spin 2s linear infinite;
+    margin: 20px auto;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
