--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 
 <div class="container">
-
+    <div class="space-container"></div>
     <app-loader></app-loader>
     <div class="welcome-container">
         <p>Welcome to Weather Now, your go-to destination for real-time weather updates! Whether you're planning your day, a weekend getaway, or just curious about the weather conditions in your city, we've got you covered.</p>
